fixed spacing for form and removed comment that had been completed

--- a/public_html/styles.css
+++ b/public_html/styles.css
@@ -85,10 +85,4 @@ footer {
 	color: black;
 }
 
-.form-control {
-	margin-left: 7em;
-}
 
-#button {
-	margin-left: 7em;
-}
